# Stonr

./: .gitignore  .sync-conflict-20260420-063502-J63IAOR.env  .sync-conflict-20260420-063502-J63IAOR.env_old  Cargo.toml  LICENSE  PRODUCTION_CHECKLIST.md  README.md  test_event.fixed.sync-conflict-20260420-063502-J63IAOR.json  test_event.sync-conflict-20260420-063502-J63IAOR.json  wizardry.workspace.conf
.github/workflows/: build-release.yml  build-supported-platforms.yml  ci.yml  coverage.yml
app/: README.md  app.js  index.html  style.css
app/assets/icons/meta/: icon-settings.conf
app/scripts/: stonr-control-backend.sh
apps/stonr-control/: README.md  app.js  index.html  style.css
apps/stonr-control/scripts/: stonr-control-backend.sh
assets/icons/meta/: icon-settings.conf
docs/: api.md  deployment.md  nostr-blog.md  operations.md  performance.md
nix/: standalone.nix
onstr/: README.md  wizardry.workspace.conf
onstr/app/: README.md  app.js  index.html  style.css
onstr/app/assets/icons/macos/: forge.icns
onstr/app/assets/icons/meta/: icon-settings.conf
onstr/app/scripts/: onstr-backend.sh
onstr/assets/icons/meta/: icon-settings.conf
onstr/core/: Cargo.toml
onstr/core/src/: main.rs
onstr/core/tests/: control_app_static.rs
shared/: nip-capabilities.json
shared/nostr-shared/: Cargo.toml
shared/nostr-shared/src/: crypto.rs  event.rs  filter.rs  lib.rs  nip42.rs  nip98.rs  parity.rs
src/: auth.rs  blossom.rs  config.rs  deploy.rs  files.rs  log.rs  main.rs  mirror.rs  nip98.rs  policy.rs  server.rs  storage.rs  ws.rs
stonr/: CHANGELOG.md  Cargo.toml  README.md
stonr/app/: README.md  app.js  index.html  style.css
stonr/app-support/: binder.yaml
stonr/app/assets/icons/macos/: forge.icns
stonr/app/assets/icons/meta/: icon-settings.conf
stonr/app/scripts/: stonr-control-backend.sh
stonr/assets/icons/macos/: forge.icns
stonr/assets/icons/meta/: icon-settings.conf
stonr/docs/: api.md  mirroring.md  onion.md  reverse-proxy.md
stonr/src/: auth.rs  autoconfig.rs  blossom.rs  config.rs  event.rs  files.rs  log.rs  main.rs  mirror.rs  nip98.rs  policy.rs  server.rs  storage.rs  ws.rs
stonr/tests/: cli.rs  control_app_static.rs  control_backend.rs
test1/: .sync-conflict-20260420-063502-J63IAOR.env
tests/: cli.rs  control_app_static.rs  control_backend.rs
