[package]
name = "stonr"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
axum = { version = "0.7", features = ["macros", "multipart", "ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
anyhow = "1"
tempfile = "3"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
secp256k1 = { version = "0.28", features = ["global-context"] }
rand = "0.8"
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"] }
sha1 = "0.10"
tokio-socks = "0.5"
url = "2"
base64 = "0.22"
mime_guess = "2"
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
