[workspace]
resolver = "2"
members = [
  "stonr",
  "shared/nostr-shared",
  "onstr/core",
]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros", "multipart", "ws"] }
base64 = "0.22"
bech32 = "0.11"
chacha20poly1305 = "0.10"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
futures-util = "0.3"
hex = "0.4"
rand = "0.8"
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
secp256k1 = { version = "0.28", features = ["global-context"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
scrypt = "0.11"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "time", "sync"] }
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"] }
url = "2"
walkdir = "2"
