[package]
name = "onstr-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
bech32.workspace = true
chacha20poly1305.workspace = true
clap.workspace = true
futures-util.workspace = true
hex.workspace = true
nostr-shared = { path = "../../shared/nostr-shared" }
rand.workspace = true
reqwest.workspace = true
scrypt.workspace = true
secp256k1.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
url.workspace = true
